--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,20 +8,40 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    strategy:
-      matrix:
-        node-version: [16.x]
-    
     steps:
     - uses: actions/checkout@v2
 
-    - name: Setup node ${{ matrix.node-version }}
+    - name: Setup node
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '16'
+        cache: 'npm'
 
     - name: Build
       run: |
-        npm install
-        gulp bundle
+        npm ci
+        npx gulp bundle
+
+    - name: Deploy
+      uses: Reggionick/s3-deploy@v3.1.1
+      with:
+        # Directory to deploy
+        folder: build
+        # Name of AWS Bucket
+        bucket: ${{ secrets.S3_BUCKET }}
+        # The destination bucket region
+        bucket-region: ${{ secrets.S3_BUCKET_REGION }}
+        # AWS CloudFront distribution ID
+        dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+        # AWS CloudFront invalidation path(s)
+        invalidation: /*
+        # Removes files in S3 that are not available in the local copy of the directory
+        delete-removed: true
+        # Use this parameter to specify Cache-Control: no-cache, no-store, must-revalidate header
+        no-cache: true
+        # Upload files with private ACL, needed for S3 static website hosting
+        private: true
