build: updated the build to trigger the build of repo ch-harmen-docs.
That way changes to the ch-harmen-docs-ui will automatically trigger a rebuild and redeployment of the website https://docs.harmen.ch.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,3 +38,8 @@ jobs:
 
     - name: Invalidate CloudFront distribution
       run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
+
+    - name: Trigger ch-harmen-docs build
+      run: gh workflow run build.yml --repo harmenweber/ch-harmen-docs
+      env:
+        GITHUB_TOKEN: ${{ secrets.TRIGGER_CH_HARMEN_DOCS_BUILD_TOKEN }}
